# cryptocrawl

./: .cursorrules  .gitignore  Cargo.toml  README.md  README_DB.md  analyze_metrics.ps1  build.rs  db_manager.ps1  enhance_db.ps1  import_jsonl.ps1  init_db.sql  integration_test_summary.md  monitor_crawl.ps1  setup.rs
cache/api_docs/: anyhow.md
config/: config.toml
crawler/: Cargo.toml  README.md
crawler/src/: crawler.rs  db.rs  example.rs  headless.rs  lib.rs  main.rs  models.rs  robots.rs  service.rs  solana.rs  ui.rs
manager/: Cargo.toml
manager/config/: config.toml
manager/src/: api.rs  db.rs  evaluator.rs  lib.rs  main.rs  models.rs  solana.rs
scripts/: analyze_js_dependency.sql  crawl_reports.sql  create_pages_table.sql  extract_links.sql  fix_db.sql  populate_pages_table.sql
src/: crawl_data.rs  main.rs  solana_integration.rs
tests/: Cargo.toml  README.md
tests/src/: integration_test.rs
tools/: Cargo.toml
