[package]
name = "cryptocrawl"
version = "0.1.0"
edition = "2021"
authors = ["CryptoCrawl Team"]
description = "A blockchain incentivized web crawler PoC"

[dependencies]
spider = "1.86.0"
tokio = { version = "1.28", features = ["full"] }
# Solana dependencies
solana-sdk = "1.17.2"
solana-client = "1.17.2"
solana-program = "1.17.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.4"
