[workspace]
members = [
    "manager",
    "crawler",
    "tools",
]

[workspace.dependencies]
spider = "1.86.0"
tokio = { version = "1.28", features = ["full"] }
# Solana dependencies
solana-sdk = "1.17.2"
solana-client = "1.17.2"
solana-program = "1.17.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
daipendency = "1.2.5"
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
ollama-rs = "0.1.6"
