[workspace]
members = [
    "manager",
    "crawler",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
# Solana dependencies
solana-sdk = "1.17.2"
solana-client = "1.17.2"
solana-program = "1.17.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.4"
rusqlite = { version = "0.25.0", features = ["bundled"], default-features = false }
daipendency = "1.2.5"
axum = "0.7"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
ollama-rs = "0.1.6"

[patch.crates-io]
libsqlite3-sys = { git = "https://github.com/rusqlite/rusqlite", branch = "master", features = ["bundled"] }
