[package]
name = "cryptocrawl-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Web crawler with blockchain incentives for CryptoCrawl"

[dependencies]
# Web crawling
spider = "0.5.3"
url = "2.4.1"

# Async runtime and utilities
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"

# Web server
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors"] }

# Database
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Serialization
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

# CLI
clap = { version = "4.4.6", features = ["derive"] }

# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.49"

# Utilities
chrono = "0.4.31"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8.0"
mockall = "0.11.4" 