[package]
name = "cryptocrawl-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Crawler component for the CryptoCrawl distributed web crawling platform"

[dependencies]
# Web crawling
spider = "1.82.2"
url = "2.4"

# Async runtime and utilities
tokio = { version = "1.28", features = ["full"] }
futures = "0.3.28"

# Web server
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.3", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0.49"

# Utilities
chrono = "0.4.31"
rand = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }

# New dependency
daipendency = "1.2.5"

[dev-dependencies]
tempfile = "3.8.0"
mockall = "0.11.4" 