[package]
name = "cryptocrawl-crawler"
version = "0.1.0"
edition = "2021"
description = "Crawler component for the CryptoCrawl distributed web crawling platform"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
rand = "0.8"
regex = "1.10.2"
rusqlite = { version = "0.25.0", features = ["bundled"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
scraper = "0.23.1"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
url = "2.4"
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.7"
mockall = "0.11" 