[package]
name = "cryptocrawl-manager"
version = "0.1.0"
edition = "2021"
authors = ["CryptoCrawl Team"]
description = "Manager for the CryptoCrawl blockchain incentivized web crawler"

[dependencies]
spider = { workspace = true }
tokio = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
rusqlite = { workspace = true }
daipendency = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
ollama-rs = { workspace = true } 