[package]
name = "cryptocrawl-manager"
version = "0.1.0"
edition = "2021"
description = "Manager component for the CryptoCrawl distributed web crawling platform"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["headers", "multipart"] }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
daipendency = "1.2.5"
url = "2.4"
ollama-rs = "0.1.6"
solana-client = "1.17.2"
solana-sdk = "1.17.2" 