[package]
name = "cryptocrawl-tools"
version = "0.1.0"
edition = "2021"
description = "Utility tools for the CryptoCrawl platform"

[dependencies]
anyhow = "1.0"
daipendency = "1.2.5"
tokio = { version = "1.28", features = ["full"] }
env_logger = "0.4"
log = "0.4"

# Binary targets will be automatically detected in src/bin
# No need to explicitly list them here 